# fetchr

./: .gitignore  Fetchr.flatpak  README.md  pyproject.toml
data/: dev.headlessflower.Fetchr.desktop.in  dev.headlessflower.Fetchr.metainfo.xml.in
flatpak/: dev.headlessflower.Fetchr.yml
repo/: summary  summary.idx
repo/refs/heads/app/dev.headlessflower.Fetchr/x86_64/: master
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/summaries/: 31bc89f02b3f572e83c92b266b2b7ab178c676c18c657c08febe0562e3998715-7ee04d20c3de9f43afae9faf586e8d86923f4825bdcd9c5534edd6efbba5c174.delta
scripts/: bootstrap.sh  porting-notes.md  run-dev.sh
src/fetchr/: application.py  main.py  window.py
src/fetchr/models/: job.py
src/fetchr/services/: download_service.py  queue_service.py  settings_service.py
src/fetchr/utils/: paths.py
src/fetchr/widgets/: job_row.py
