[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fetchr"
version = "0.1.0"
description = "Native GNOME rewrite of Fetchr"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Gerardo Garcia" }
]
dependencies = []

[project.scripts]
fetchr = "fetchr.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
